# wattbikeexport

./: .gitignore  EXPORT.md  README.md  pyproject.toml  tox.toml  wattbike_export.py
.github/workflows/: main.yml
docs/: data_notes.md  research.md
src/wattbikeexport/: common.py  dal.py  export.py  test_dal.py  test_export.py
src/wattbikeexport/tests/: test_dal.py  test_export.py
tests/: test_wattbike_export.py
